# drive-quick-metadata-scan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
gdrive_dedupe/: __init__.py
gdrive_dedupe/auth/: oauth.py
gdrive_dedupe/cli/: app.py
gdrive_dedupe/dedupe/: duplicate_files.py  duplicate_folders.py
gdrive_dedupe/drive/: models.py  scanner.py
gdrive_dedupe/hashing/: file_hash_index.py  folder_hash_engine.py
gdrive_dedupe/reports/: html_report.py  stats.py
gdrive_dedupe/storage/: database.py  schema.sql
scripts/: bootstrap_credentials.md
tests/: test_cli_utils.py  test_database.py  test_duplicate_detection.py  test_folder_hashing.py  test_html_report.py
